# mbox-reader

./: Cargo.toml
datasets/: dev_apisix_apache_org.mbox  test_emails.mbox  test_emails_1000.mbox  test_lex.mbox  test_seek_positions.mbox
src/: lib.rs  mailbox.rs  main.rs
src/embedding/: local.rs  mod.rs
src/mailbox/: file.rs
src/search/: memory_cosinus.rs  mod.rs
src/storage/: file.rs  mod.rs
tests/: mbox_test.rs
