[package]
name = "mbox-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.41"
tracing-attributes = "0.1.30"
tracing-test = "0.2.5"
tracing-subscriber = "0.3.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
memmap2 = "0.9.8"
quoted_printable = "0.5.1"
rfc2047-decoder = "1.0.6"
rust-bert = "0.23.0"
console = "0.16.0"
strum = { version = "0.27", features = ["derive"] }
crossbeam-channel = "0.5.15"
